# tictactoe

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ---bug-report.md
src/entities/: game.py  typings.py
src/errors/: __init__.py  gameover.py  invalidMove.py  moveIsBusy.py
tests/entities/game/: test_addMove.py  test_getNextMoveShape.py  test_hasMinimumMovesToHaveWinner.py  test_isFreeMove.py  test_isValidMove.py  test_moveDidWin.py  test_reachedMaximumMoves.py
